--- a/ghcr/Dockerfile
+++ b/ghcr/Dockerfile
@@ -9,7 +9,22 @@ RUN apt-get update && \
     curl \
     make \
     build-essential \
-    python3 python3-pip
+    python3 python3-pip \
+    libnss3 \
+    libnspr4 \
+    libdbus-1-3 \
+    libatk1.0-0t64 \
+    libatk-bridge2.0-0t64 \
+    libcups2t64 \
+    libdrm2 \
+    libxkbcommon0 \
+    libatspi2.0-0t64 \
+    libxcomposite1 \
+    libxdamage1 \
+    libxfixes3 \
+    libxrandr2 \
+    libgbm1 \
+    libasound2t64
 
 RUN pip install --break-system-packages ansitoimg
 
