use txt instead of out for plain text file

--- a/Makefile.conf
+++ b/Makefile.conf
@@ -1,7 +1,7 @@
-.DEFAULT_GOAL := s04r/s04r.out
+.DEFAULT_GOAL := s04r/s04r.txt
 
 cat: $(.DEFAULT_GOAL)
-	bat --theme Nord $(patsubst %.out,%.col.out,$<)
+	bat --theme Nord $(patsubst %.txt,%.col.out,$<)
 
 CONDA_ACTIVATE=source $$(conda info --base)/etc/profile.d/conda.sh ; conda activate
 
