--- a/Makefile.action
+++ b/Makefile.action
@@ -1,5 +1,5 @@
 DAT_RUST := s01/s01.yaml s01r/s01r.yaml s02/s02.yaml s02r/s02r.yaml s03/s03.yaml s03r/s03r.yaml s04/s04.yaml s04r/s04r.yaml s05/s05.yaml us08/us08.yaml
-OUT_RUST := $(addsuffix .out, $(basename $(DAT_RUST)))
+OUT_RUST := $(addsuffix .txt, $(basename $(DAT_RUST)))
 
 OUT    := $(OUT_RUST)
 ALIAS  := $(notdir $(OUT))
@@ -17,7 +17,7 @@ clean: $(patsubst %/,clean_%,$(dir $(DAT_RUST)))
 	- $(RM) stats.html
 
 $(patsubst %/,clean_%,$(dir $(DAT_RUST))): clean_%: %
-	- $(RM) "$(<)/$(<)"*.{out,pdf,png,dot}
+	- $(RM) "$(<)/$(<)"*.{txt,out,pdf,png,dot}
 
 
 check: $(patsubst %/,check_%,$(dir $(DAT_RUST)))
@@ -31,13 +31,13 @@ $(addprefix check_,$(DAT_RUST)): check_%: % ./rust/src/*
 
 
 $(ALIAS):
-	@make --no-print-directory $(patsubst %.out,%,$@)/$@
+	@make --no-print-directory $(patsubst %.txt,%,$@)/$@
 
-$(OUT_RUST): %.out: %.yaml ./rust/src/*
+$(OUT_RUST): %.txt: %.yaml ./rust/src/*
 	@date
 	./rust/target/release/ayto sim -c -o $(basename $<) $< > $(basename $<).col.out
 	# strip ansi color stuff to get a plain text file
-	sed 's/\x1b\[[0-9;]*m//g' $(basename $<).col.out > $(basename $<).out
+	sed 's/\x1b\[[0-9;]*m//g' $(basename $<).col.out > $(basename $<).txt
 	# colored output
 	python3 generate_png.py "$(basename $<).col.out" "$(basename $<).col.png" "$(basename $<)_tab.png"
 	@date
