--- a/.gitignore
+++ b/.gitignore
@@ -1,27 +1,13 @@
 .*
+
 *.pdf
 *.out
+*.txt
 *.png
-*.xopp
+
 *.dot
-*.mkv
-*.mp4
-*.hist
-tex-aux
-statsMB.tex
-statsMN.tex
-statsInfo.tex
-stats.tex
-*.aux
-*.toc
-*.fls
-*.log
-dot_colors_check.bash
-ts.dat
-py
-cpp
-pheagan
+*.xopp
+
 local_workflow.bash
 gh.bash
-clean
 *.conf
