fix numbering in data

--- a/s01r/s01r.yaml
+++ b/s01r/s01r.yaml
@@ -177,7 +177,7 @@ constraints:
     map:
       Josua: Sarah
 
-  - type: !Box {num: 8.5, comment: "E15 -- geschenkte Matchbox"}
+  - type: !Box {num: 8.1, comment: "E18/15 -- geschenkte Matchbox"}
     check: !Lights [0]
     map:
       Tommy: Melina
