fix numbering in data (2)

--- a/s01r/s01r.yaml
+++ b/s01r/s01r.yaml
@@ -51,17 +51,21 @@ constraints:
       Salvatore: Jacqueline
       Tommy: Melina
 
-  - type: !Box {num: 1.9, comment: "E04 -- Francesco muss ausziehen"}
+  - type: !Box {num: 2, comment: "E03 -- Francesco muss ausziehen"}
     check: !Lights [1]
     map:
       Francesco: Jules
 
-  - type: !Box {num: 2, comment: "E06"}
+    # echte MB wurde gestrichen
+    # nix in E04
+
+  # in E05 war das Spiel
+  - type: !Box {num: 3, comment: "E06"}
     check: !Lights [0]
     map:
       Tommy: Walentina
 
-  - type: !Night {num: 2, comment: "E06"}
+  - type: !Night {num: 3, comment: "E06"}
     check: !Lights [3]
     map:
       Alexander: Finnja
@@ -75,12 +79,12 @@ constraints:
       Salvatore: Jacqueline
       Tommy: Melina
 
-  # - type: !Box {num: 3, comment: "E08"}
+  # - type: !Box {num: 4, comment: "E08"}
   #   check: !Lights ?
   #   map:
   #     Diogo: Aurelia
 
-  - type: !Night {num: 3, comment: "E08"}
+  - type: !Night {num: 4, comment: "E08"}
     check: !Lights [4]
     map:
       Alexander: Stefanie
@@ -95,12 +99,12 @@ constraints:
       Tommy: Jill
       # Jacqueline
 
-  # - type: !Box {num: 4, comment: "E10"}
+  # - type: !Box {num: 5, comment: "E10"}
   #   check: !Lights ?
   #   map:
   #     Melina: Tommy
 
-  - type: !Night {num: 4, comment: "E10"}
+  - type: !Night {num: 5, comment: "E10"}
     check: !Lights [3]
     map:
       Alexander: Sarah
@@ -115,12 +119,12 @@ constraints:
       Tommy: Melina
       # Diogo: Jacqueline
 
-  - type: !Box {num: 5, comment: "E12"}
+  - type: !Box {num: 6, comment: "E12"}
     check: !Lights [0]
     map:
       Salvatore: Finnja
 
-  - type: !Night {num: 5, comment: "E12"}
+  - type: !Night {num: 6, comment: "E12"}
     check: !Lights [3]
     map:
       Alexander: Stefanie
@@ -134,12 +138,12 @@ constraints:
       Salvatore: Jacqueline
       Tommy: Melina
 
-  - type: !Box {num: 6, comment: "E14"}
+  - type: !Box {num: 7, comment: "E14"}
     check: !Lights [0]
     map:
       Eugen: Finnja
 
-  - type: !Night {num: 6, comment: "E14"}
+  - type: !Night {num: 7, comment: "E14"}
     check: !Lights [2]
     map:
       Alexander: Jacqueline
@@ -153,12 +157,12 @@ constraints:
       Salvatore: Walentina
       Tommy: Melina
 
-  - type: !Box {num: 7, comment: "E16"}
+  - type: !Box {num: 8, comment: "E16"}
     check: !Lights [0]
     map:
       Eugen: Stefanie
 
-  - type: !Night {num: 7, comment: "E16"}
+  - type: !Night {num: 8, comment: "E16"}
     check: !Lights [1]
     map:
       Alexander: Melina
@@ -172,17 +176,17 @@ constraints:
       Salvatore: Jill
       Tommy: Stefanie
 
-  - type: !Box {num: 8, comment: "E18"}
+  - type: !Box {num: 9, comment: "E18"}
     check: !Lights [0]
     map:
       Josua: Sarah
 
-  - type: !Box {num: 8.1, comment: "E18/15 -- geschenkte Matchbox"}
+  - type: !Box {num: 9.1, comment: "E18/15 -- geschenkte Matchbox"}
     check: !Lights [0]
     map:
       Tommy: Melina
 
-  - type: !Night {num: 8, comment: "E18"}
+  - type: !Night {num: 9, comment: "E18"}
     check: !Lights [4]
     map:
       Alexander: Sarah
@@ -197,12 +201,12 @@ constraints:
       Tommy: Finnja
       # Salvatore: Jacqueline
 
-  - type: !Box {num: 9, comment: "E20"}
+  - type: !Box {num: 10, comment: "E20"}
     check: !Lights [1]
     map:
       Josua: Aurelia
 
-  - type: !Night {num: 9, comment: "E20"}
+  - type: !Night {num: 10, comment: "E20"}
     check: !Lights [7]
     map:
       Alexander: Vanessa
@@ -215,27 +219,3 @@ constraints:
       Manuel: Kathleen
       Salvatore: Jacqueline
       Tommy: Finnja
-
-# 10 richtiges_matching1 f
-# Alexander -> Sarah
-# Danilo    -> Melina
-# Diogo     -> Finnja
-# Eugen     -> Walentina
-# Francesco -> Jules
-# Jamy      -> Stefanie
-# Josua     -> Aurelia
-# Manuel    -> Kathleen
-# Salvatore -> Jacqueline
-# Tommy     -> Jill
-#
-# 10 richtiges_matching2 f
-# Alexander -> Vanessa
-# Danilo    -> Melina
-# Diogo     -> Finnja
-# Eugen     -> Walentina
-# Francesco -> Jules
-# Jamy      -> Stefanie
-# Josua     -> Aurelia
-# Manuel    -> Kathleen
-# Salvatore -> Jacqueline
-# Tommy     -> Jill
