formatting + split stats into de and us -> also move data to data/ folder

--- a/.github/workflows/build-commit.yml
+++ b/.github/workflows/build-commit.yml
@@ -10,7 +10,7 @@ on:
     branches: [ "main" ]
     paths:
       - 'rust/**'
-      - '**.yaml'
+      - 'data/**.yaml'
     # paths-ignore:
     #   - 'img/**'
     #   - 'README.md'
