--- a/data/de01/s01.yaml
+++ b/data/de01/s01.yaml
@@ -229,4 +229,5 @@ constraints:
       Sabrina: Elisha
       Ivana: Dominic
       Laura: Aleks
+      # musste auch richtig sein + 11 Lichter um zu gewinnen
       # Madleine: Juliano
