--- a/data/de05/de05.yaml
+++ b/data/de05/de05.yaml
@@ -199,11 +199,11 @@ constraints:
       Paulo: Sina
       Ryan: Edda
 
-  # - type: !Box {num: 8, comment: "E17"}
-  #   check: !Lights ? # wäre 1 gewesen
-  #   map:
-  #     Eti: Maja
-  #     # Paddy: Edda
+  - type: !Box {num: 8, comment: "E17 -- verkauft"}
+    check: !Nothing
+    map:
+      Eti: Maja
+      # Paddy: Edda
 
   - type: !Night {num: 8, comment: "E18"}
     check: !Lights [4]
@@ -273,4 +273,3 @@ constraints:
       Martin: Sina
       Sidar: Edda
       Ryan: Jana
-
