--- a/data/de03/de03.yaml
+++ b/data/de03/de03.yaml
@@ -92,7 +92,7 @@ constraints:
   - type: !Box {num: 4, comment: "E08 -- verkauft"}
     check: !Nothing
     map:
-      Dana: William
+      William: Dana
 
   - type: !Night {num: 4, comment: "E08"}
     check: !Lights [3]
