switch de04 numbering in beginning

--- a/data/de04/de04.yaml
+++ b/data/de04/de04.yaml
@@ -31,12 +31,12 @@ setB:
   - Marwin
 
 constraints:
-  - type: !Box {num: 1, comment: "E02"}
+  - type: !Box {num: 0.2, comment: "E02 -- zusätzliche MB, da dup nicht bekannt"}
     check: !Lights [0]
     map:
       Valeria: Marwin
 
-  - type: !Box {num: 1.25, comment: "E03"}
+  - type: !Box {num: 1, comment: "E03"}
     check: !Lights [0]
     map:
       Dorna: Kenneth
