--- a/data/.template.yaml
+++ b/data/.template.yaml
@@ -18,4 +18,6 @@ constraints:
 
   # - type: !Night {num: 1, comment: "E01"}
   #   check: !Lights [2]
+  #   resultUnknown: true
+  #   noExclude: true
   #   map:
