--- a/data/.template.yaml
+++ b/data/.template.yaml
@@ -19,5 +19,5 @@ constraints:
   # - type: !Night {num: 1, comment: "E01"}
   #   check: !Lights [2]
   #   resultUnknown: true
-  #   noExclude: true
+  #   # noExclude: true
   #   map:
