fixup us01 data and add check to tool to ensure no duplicate keys are present in night-map

--- a/data/us01/us01.yaml
+++ b/data/us01/us01.yaml
@@ -46,7 +46,7 @@ constraints:
       Dillan: Coleysia
       Dre: Jacy
       Ethan: Shanley
-      John: Amber
+      John: Simone
       Joey: Paige
       Ryan: Amber
       Wes: Kayla
