--- a/.github/workflows/run-simulation.yml
+++ b/.github/workflows/run-simulation.yml
@@ -4,9 +4,9 @@ on:
   push:
     branches:
       - main
-    paths:
-      - 'rust/**'
-      - 'data/**.yaml'
+    # paths:
+    #   - 'rust/**'
+    #   - 'data/**.yaml'
 
   # Allows to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -36,22 +36,26 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
+        with:
+          ref: main
+          fetch-depth: 0
 
-      - name: Detect changes in sim1 and sim2
+      - name: Detect changes in inputfiles
         id: detect_changes
         run: |
           # Check if there's a push affecting the `rust/**` path or if it's a manual trigger
           if [[ "${{ github.event_name }}" == "workflow_dispatch" || "$(git diff --name-only ${{ github.event.before }} ${{ github.event.after }} | grep "rust/.*" || echo "")" == "" ]]; then
             # If `rust/**` is changed or it's a manual trigger, run all simulations
-            sims="[$(find ./data -type f -name '*.yaml' | sort -u | sed '{:q;N;s/\n/","/g;t q}')]"
+            sims="[\"$(find ./data -not -path '*/[@.]*' -type f -name '*.yaml' | sort -u | sed '{:q;N;s/\n/","/g;t q}')\"]"
           else
             # Detect which simulation inputs have changed
-            sims="[$(git diff --name-only ${{ github.event.before }} ${{ github.event.after }} | grep "data/.*\.yaml" | sed "s/\(.*\)\.yaml$/\1/" | sort -u | sed '{:q;N;s/\n/","/g;t q}')]"
+            sims="[\"$(git diff --name-only ${{ github.event.before }} ${{ github.event.after }} | grep "data/[^.]*\.yaml" | sed "s/\(.*\)\.yaml$/\1/" | sort -u | sed '{:q;N;s/\n/","/g;t q}')\"]"
           fi
+          echo "$sims"
+          sims="['./data/de01/de01.yaml', './data/de02/de02.yaml']"
 
           # Output the list of simulations that need to be run
-          echo "sims=$sims" >> $GITHUB_ENV
-          echo "::set-output name=sims::$sims"
+          echo "sims=${sims}" >> $GITHUB_OUTPUT
 
 
 
@@ -78,23 +82,26 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-cargo-index-
 
-      - name: Cache Rust build
-        uses: actions/cache@v3
-        with:
-          path: rust/target
-          key: ${{ runner.os }}-cargo-build-${{ hashFiles('**/Cargo.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-cargo-build-
-
       - name: setup rust
         uses: dtolnay/rust-toolchain@master
         with:
           toolchain: stable
 
+      - name: Cache Rust build
+        uses: actions/cache@v3
+        with:
+          path: rust/target
+          key: ${{ runner.os }}-cargo-build-${{ hashFiles('**/Cargo.lock') }}-${{ hashFiles('rust/**') }} }}
+          restore-keys: |
+            ${{ runner.os }}-cargo-build-
+
       - name: Build rust
         run: |
-          cd rust && cargo build --release
-          # cd rust && RUSTFLAGS="-C target-cpu=skylake" cargo build --settings profile.release.codegen-units=1 --settings profile.release.lto=true --release
+          cd rust
+          if [[ ! -f target/release/ayto ]] ; then
+            cargo build --release
+            # RUSTFLAGS="-C target-cpu=skylake" cargo build --settings profile.release.codegen-units=1 --settings profile.release.lto=true --release
+          fi
 
       - name: Upload the executable
         id: upload-artifact
@@ -108,7 +115,9 @@ jobs:
     runs-on: ubuntu-latest
     container:
       image: ghcr.io/atticus-sullivan/custom-action:latest
-    needs: define-matrix
+    needs:
+      - define-matrix
+      - build
     strategy:
       matrix:
         sim: ${{ fromJSON(needs.define-matrix.outputs.sims) }}
@@ -139,13 +148,55 @@ jobs:
 
       - name: Compute for ${{ matrix.sim }}
         run: |
-          inputfile="${{ matrix.sim }}"
-          ./ayto sim -c -o "${inputfile%.yaml}" "${inputfile}" > "${inputfile%.yaml}.col.out"
+          STEM="${{ matrix.sim }}"
+          STEMD="$(dirname ${STEM})"
+          STEM="${STEM%.yaml}"
+          SAFENAME="$(echo "${{ matrix.sim }}" | tr "/" "_")"
 
-      - uses: stefanzweifel/git-auto-commit-action@v5
+          chmod +x ./ayto
+
+          ./ayto sim -c -o "${STEM}" "${STEM}.yaml" > "${STEM}.col.out"
+
+          # Use $GITHUB_ENV to share variables across steps
+          echo "STEM=${STEM}" >> $GITHUB_ENV
+          echo "STEMD=${STEMD}" >> $GITHUB_ENV
+          echo "SAFENAME=${SAFENAME}" >> $GITHUB_ENV
+
+      - name: Upload simulation results
+        uses: actions/upload-artifact@v4
         with:
-          commit_message: Built results
-          branch: build
+          name: sim-results-${{ env.SAFENAME }}
+          path: |
+            ${{ env.STEM }}.col.out
+            ${{ env.STEMD }}/statInfo.csv
+            ${{ env.STEMD }}/statMB.csv
+            ${{ env.STEMD }}/statMN.csv
+            ./data/.template.yaml
+
+  commit-results:
+    runs-on: ubuntu-latest
+    needs: run-sim
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          ref: build
+
+      - name: Download simulation results
+        uses: actions/download-artifact@v4
+        with:
+          pattern: sim-results-*  # Download all the artifacts from the matrix jobs
+          path: ./data
+          merge-multiple: true
+
+      - run: |
+          git status
+          ls -al ./
+          ls -al ./data/*
+
+      # - uses: stefanzweifel/git-auto-commit-action@v5
+      #   with:
+      #     commit_message: Computation results
+      #     branch: build
 
   generate-site:
     runs-on: ubuntu-latest
@@ -157,17 +208,22 @@ jobs:
         run: |
           wget -O ${{ runner.temp }}/hugo.deb https://github.com/gohugoio/hugo/releases/download/v${HUGO_VERSION}/hugo_extended_${HUGO_VERSION}_linux-amd64.deb \
           && sudo dpkg -i ${{ runner.temp }}/hugo.deb
+
       - name: Install Dart Sass
         run: sudo snap install dart-sass
+
       - name: Checkout
         uses: actions/checkout@v4
         with:
           submodules: recursive
+
       - name: Setup Pages
         id: pages
         uses: actions/configure-pages@v5
+
       - name: Install Node.js dependencies
         run: "[[ -f package-lock.json || -f npm-shrinkwrap.json ]] && npm ci || true"
+
       - name: Build with Hugo
         env:
           HUGO_CACHEDIR: ${{ runner.temp }}/hugo_cache
@@ -177,6 +233,7 @@ jobs:
           hugo \
             --minify \
             --baseURL "${{ steps.pages.outputs.base_url }}/"
+
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
