--- a/data/de01r/de01r.yaml
+++ b/data/de01r/de01r.yaml
@@ -1,6 +1,10 @@
 # vim macro to swap the map:
 # 0wvedwvep0wPj
 
+frontmatter:
+  title: 'DE RSIL Staffel 1'
+  weight: 1
+
 tree_gen: true
 
 # rule_set: !SomeoneIsDup
