--- a/data/uk01/uk01.yaml
+++ b/data/uk01/uk01.yaml
@@ -1,6 +1,10 @@
 # vim macro to swap the map:
 # 0wvedwvep0wPj
 
+frontmatter:
+  title: 'UK Staffel 1'
+  weight: 1
+
 tree_gen: true
 
 # rule_set: !SomeoneIsDup
