--- a/.github/workflows/run-simulation.yml
+++ b/.github/workflows/run-simulation.yml
@@ -227,13 +227,24 @@ jobs:
           sudo apt install graphviz python3 python3-pip
           pip install --break-system-packages ansitoimg
 
-      - name: Build assets
+      - name: Build picture assets
         run: |
           for ele in ./data/*/*.col.out ; do
             n="${ele##*/}"
             n="${n%.col.out}"
             python3 generate_png.py data/de01/de01.col.out ./gh-pages/static/${n}/${n}
           done
+
+      - name: Download the built tool artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: ayto
+
+      - name: Build comparisons
+        run: |
+          chmod +x ./ayto
+          ./ayto graph gh-pages/content/ayto/comparison/de.md gh-pages/content/ayto/comparison/us.md
+
 
       - name: Build with Hugo
         env:
