--- a/.github/workflows/run-simulation.yml
+++ b/.github/workflows/run-simulation.yml
@@ -188,6 +188,18 @@ jobs:
         with:
           ref: build
 
+      - name: Setup working directory
+        run: |
+          git fetch --no-tags origin main
+          git checkout -b main origin/main
+          git switch build
+
+      - name: update on main
+        run: |
+          git config --global user.name "Updater"
+          git config --global user.email "updater@example.com"
+          git merge --no-ff main
+
       - name: Download simulation results
         uses: actions/download-artifact@v4
         with:
